public/lite/api/en/r1.9/_sources/api_c/model_c.rst.txt
model_c
=======================



Define
------------

- :doc:`../generate/define_model_c.h_MS_MAX_SHAPE_NUM-1`

Functions
------------

- :doc:`../generate/function_model_c.h_MSModelBuild-1`

- :doc:`../generate/function_model_c.h_MSModelBuildFromFile-1`

- :doc:`../generate/function_model_c.h_MSModelCreate-1`

- :doc:`../generate/function_model_c.h_MSModelDestroy-1`

- :doc:`../generate/function_model_c.h_MSModelExportWeight-1`

- :doc:`../generate/function_model_c.h_MSModelGetInputByTensorName-1`

- :doc:`../generate/function_model_c.h_MSModelGetInputs-1`

- :doc:`../generate/function_model_c.h_MSModelGetOutputByTensorName-1`

- :doc:`../generate/function_model_c.h_MSModelGetOutputs-1`

- :doc:`../generate/function_model_c.h_MSModelPredict-1`

- :doc:`../generate/function_model_c.h_MSModelResize-1`

- :doc:`../generate/function_model_c.h_MSModelRunStep-1`

- :doc:`../generate/function_model_c.h_MSModelSetTrainMode-1`

- :doc:`../generate/function_model_c.h_MSModelSetWorkspace-1`

