public/lite/api/en/r2.3/_sources/api_c/model_c.rst.txt
model_c
=======================


Define
------------

- :doc:`../generate/define_model_c.h_MS_MAX_SHAPE_NUM-1`

Functions
------------

- :doc:`../generate/function_model_c.h_MSExportModel-1`

- :doc:`../generate/function_model_c.h_MSExportModelBuffer-1`

- :doc:`../generate/function_model_c.h_MSExportWeightsCollaborateWithMicro-1`

- :doc:`../generate/function_model_c.h_MSModelBuild-1`

- :doc:`../generate/function_model_c.h_MSModelBuildFromFile-1`

- :doc:`../generate/function_model_c.h_MSModelCalcWorkspaceSize-1`

- :doc:`../generate/function_model_c.h_MSModelCreate-1`

- :doc:`../generate/function_model_c.h_MSModelDestroy-1`

- :doc:`../generate/function_model_c.h_MSModelExportWeight-1`

- :doc:`../generate/function_model_c.h_MSModelGetInputByTensorName-1`

- :doc:`../generate/function_model_c.h_MSModelGetInputs-1`

- :doc:`../generate/function_model_c.h_MSModelGetLearningRate-1`

- :doc:`../generate/function_model_c.h_MSModelGetOutputByTensorName-1`

- :doc:`../generate/function_model_c.h_MSModelGetOutputs-1`

- :doc:`../generate/function_model_c.h_MSModelGetTrainMode-1`

- :doc:`../generate/function_model_c.h_MSModelGetWeights-1`

- :doc:`../generate/function_model_c.h_MSModelPredict-1`

- :doc:`../generate/function_model_c.h_MSModelResize-1`

- :doc:`../generate/function_model_c.h_MSModelRunStep-1`

- :doc:`../generate/function_model_c.h_MSModelSetLearningRate-1`

- :doc:`../generate/function_model_c.h_MSModelSetTrainMode-1`

- :doc:`../generate/function_model_c.h_MSModelSetWorkspace-1`

- :doc:`../generate/function_model_c.h_MSModelSetupVirtualBatch-1`

- :doc:`../generate/function_model_c.h_MSModelUpdateWeights-1`

- :doc:`../generate/function_model_c.h_MSRunStep-1`

- :doc:`../generate/function_model_c.h_MSTrainCfgCreate-1`

- :doc:`../generate/function_model_c.h_MSTrainCfgDestroy-1`

- :doc:`../generate/function_model_c.h_MSTrainCfgGetLossName-1`

- :doc:`../generate/function_model_c.h_MSTrainCfgGetOptimizationLevel-1`

- :doc:`../generate/function_model_c.h_MSTrainCfgSetLossName-1`

- :doc:`../generate/function_model_c.h_MSTrainCfgSetOptimizationLevel-1`

- :doc:`../generate/function_model_c.h_MSTrainModelBuild-1`

- :doc:`../generate/function_model_c.h_MSTrainModelBuildFromFile-1`

